Turns out fixing the history squishy hint thing was actually way easier than I anticipated.

--- a/src/components/HintButton.less
+++ b/src/components/HintButton.less
@@ -8,15 +8,15 @@
 
 .HintButton__content {
 	background-color: @greenLight;
-	height: 0;
-	transition: height 1s;
+	max-height: 0;
+	transition: max-height 1s;
 	overflow: hidden;
 	margin-left: 1rem;
 	margin-right: 1rem;
 }
 
 .HintButton__content--expanded {
-	height: 13rem;
+	max-height: 20rem;
 }
 
 .HintButton__content--dark {
