--- a/src/components/History.less
+++ b/src/components/History.less
@@ -90,9 +90,6 @@
 	}
 
 	.History__list {
-		display: flex;
-		align-items: center;
-		flex-direction: column;
 		font-size: 3rem;
 		text-align: center;
 		padding-left: 0;
@@ -101,5 +98,28 @@
 
 	.History__label {
 		width: 20rem;
+	}
+}
+
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+	.History {
+		height: 19.5rem;
+	}
+
+	.History__label {
+		padding: 0.5rem 1rem;
+	}
+
+	.History__listContainer {
+		height: 16rem;
+		overflow: scroll;
+	}
+
+	.History__list {
+		height: 13rem;
+	}
+
+	.History__listItem {
+		font-size: 2.4rem;
 	}
 }
